[gd_scene load_steps=2 format=3 uid="uid://bgbnqa4jqrx7w"]

[ext_resource type="Script" path="res://addons/diisis/editor/src/typing_hint.gd" id="1_g04h5"]

[node name="TypingHint" type="Window"]
size = Vector2i(485, 805)
wrap_controls = true
transient = true
borderless = true
popup_window = true
script = ExtResource("1_g04h5")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 115.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ItemList" type="ItemList" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="HintTextContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HintText" type="RichTextLabel" parent="MarginContainer/HBoxContainer/HintTextContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "hint dgfghfgh fghfgh f hfgh fghfghf"
fit_content = true

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer/ItemList" to="." method="_on_item_list_item_selected"]
